# pyapicaller

./: CHANGELOG.md  README.md  build.sh  pyproject.toml  requirements.txt  setup.py
apicaller/: swagger.py
examples/: petstore3.py  spotify.py
examples/petstore3/: act_openai.py  call_openai.py  call_swagger.py  caller.py  summarize.py
examples/spotify/: caller.py
examples/uspto/: caller.py  uspto.json
