[tool.poetry]
name = "pyapicaller"
version = "0.1.1"
description = "A simple API caller package for Python"
authors = ["Roman Medvedev <pypi@romavm.dev>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
homepage = "https://github.com/Romamo/pyapicaller"
keywords = ["API", "caller", "Python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
jsonref = "^1.1.0"
pydantic = "^2.9.2"

[tool.poetry.urls]
"Homepage" = "https://github.com/Romamo/pyapicaller"
"Issues" = "https://github.com/Romamo/pyapicaller/issues"
